# box

./: .gitignore  README.md  pyproject.toml
src/box/: __main__.py
src/box/actual/: __main__.py  actual.py  commands.py
src/box/media/: commands.py  constants.py  media.py  types.py
src/box/storage/: commands.py  storage.py
src/box/utils/: __init__.py
src/box/utils/command/: __init__.py  utils.py
src/box/utils/email/: __main__.py  utils.py
src/box/utils/files/: __init__.py  utils.py
src/box/utils/yaml/: utils.py
