[project]
name = "box"
version = "0.1.0"
description = "All purpose toolbox."
authors = [{ name = "Jayden Pyles", email = "jpylesbusiness@gmail.com" }]
dependencies = [
    "click>=8.1.7",
    "rich>=13.9.4",
]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = true

[project.scripts]
box = "box.__main__:main"
